--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,6 @@ dependencies {
     implementation group: 'com.alibaba', name: 'fastjson', version: "${fastjsonVersion}"
     implementation "commons-codec:commons-codec:${commonscodecVersion}"
     implementation "com.squareup.okhttp3:okhttp:$okhttpVersion"
-//    implementation 'com.squareup.okhttp3:okhttp:3.12.1'
 
     implementation "org.slf4j:slf4j-api:$slf4jVersion"
     implementation "org.slf4j:jcl-over-slf4j:$slf4jVersion"
@@ -53,10 +52,9 @@ dependencies {
     testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
     testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
 
-//    compile 'ch.qos.logback:logback-classic:1.2.3'
-//    testCompile 'org.powermock:powermock-api-mockito:1.7.4'
-//    testCompile 'org.powermock:powermock-module-junit4:1.7.4'
-//    testCompile 'junit:junit:4.12'
+    testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.2'
+    testCompile "org.mockito:mockito-core:3.0.0"
+    testCompile('org.mockito:mockito-junit-jupiter:3.0.0')
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:$junitVersion")
     testImplementation("org.junit.jupiter:junit-jupiter-params:$junitVersion")
