--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <java.version>1.8</java.version>
     <okhttp3.version>3.12.1</okhttp3.version>
     <fastjson.version>1.2.47</fastjson.version>
+    <protobuf.version>3.9.1</protobuf.version>
   </properties>
 
   <dependencies>
@@ -47,6 +48,19 @@
       <artifactId>junit</artifactId>
       <version>4.12</version>
       <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.8</version>
+      <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.protobuf</groupId>
+      <artifactId>protobuf-java</artifactId>
+      <version>${protobuf.version}</version>
     </dependency>
   </dependencies>
 
